syntax = "proto3";

import "proto/rtc/rtc.proto";

option go_package = "github.com/pion/ion/apps/room/proto";

package room;

service RoomService {
  // Manager API
  // Room API
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomReply) {}
  rpc UpdateRoom(UpdateRoomRequest) returns (UpdateRoomReply) {}
  rpc EndRoom(EndRoomRequest) returns (EndRoomReply) {}
  rpc GetRooms(GetRoomsRequest) returns (GetRoomsReply) {}

  // Peer API
  rpc AddPeer(AddPeerRequest) returns (AddPeerReply) {}
  rpc UpdatePeer(UpdatePeerRequest) returns (UpdatePeerReply) {}
  rpc RemovePeer(RemovePeerRequest) returns (RemovePeerReply) {}
  rpc GetPeers(GetPeersRequest) returns (GetPeersReply) {}

  rpc SetImportance(SetImportanceRequest) returns (SetImportanceReply) {}

}

service RoomSignal {
  // Signal
  rpc Signal(stream Request) returns (stream Reply) {}
}

enum ErrorType {
  None = 0;
  UnkownError = 1;
  PermissionDenied = 2;
  ServiceUnavailable = 3;
  RoomLocked = 4;
  PasswordRequired = 5;
  RoomAlreadyExist = 6;
  RoomNotExist = 7;
  InvalidParams = 8;
  PeerAlreadyExist = 9;
  PeerNotExist = 10;
}

message Error {
  ErrorType code = 1;
  string reason = 2;
}

message Request {
  oneof payload {
    JoinRequest join = 1;
    LeaveRequest leave = 2;
    SendMessageRequest sendMessage = 3;
    MediaPresentationRequest mediaPresentation = 4;
  }
}

message Reply {
  oneof payload {
    JoinReply join = 1;
    LeaveReply leave = 2;
    SendMessageReply sendMessage = 3;
    MediaPresentationReply mediaPresentation = 4;
    PeerEvent Peer = 5;
    MediaPresentation presentation = 6;
    Message message = 7;
    Disconnect disconnect = 8;
    Room room = 9;
  }
}

message CreateRoomRequest {
  Room room = 1;
}

message CreateRoomReply {
  bool success = 1;
  Error error = 2;
}

message DeleteRoomRequest {
  string sid = 1;
}

message DeleteRoomReply {
  bool success = 1;
  Error error = 2;
}

message JoinRequest {
  string sid = 1;
  string uid = 2;
  string displayName = 3;
  bytes extraInfo = 4;
  Role role = 5;
  string avatar = 6;
  string vendor = 7;
  string password = 8;
}

message Permission {
  bool publish = 1;
  bool subscribe = 2;
  bool addPeers = 3;
  bool removePeers = 4;
  bool endConference = 5;
  bool LockRoom = 6;
  bool setImportance = 7;
}

message Room {
  string sid = 1;
  string name = 2;
  bool lock = 3;
  string password = 4;
  string description = 5;
}

message JoinReply {
  bool success = 1;
  Error error = 2;
  Role role = 3;
  Room room = 4;
  //Permission permission = 5;
}

message LeaveRequest {
  string sid = 1;
  string uid = 2;
}

message LeaveReply {
  bool success = 1;
  Error error = 2;
}

enum Role {
  Host = 0;
  Guest = 1;
}

enum Protocol {
  ProtocolUnknown = 0;
  WebRTC = 1;
  SIP = 2;
  RTMP = 3;
  RTSP = 4;
}

enum MediaType {
  MediaUnknown = 0;
  UserMedia = 1;
  ScreenCapture = 2;
  Cavans = 3;
  Streaming =4;
  VoIP = 5;
}

message Track {
  string id = 1;
  string stream_id = 2;
  MediaType type = 3;
  rtc.Track track = 4;
}

message MediaPresentation {
  string sid = 1;
  string uid = 2;
  repeated Track tracks = 3;
}

message MediaPresentationRequest { MediaPresentation request = 1; }

message MediaPresentationReply {
  bool success = 1;
  Error error = 2;
}

message Peer {
  enum Direction {
    INCOMING = 0;
    OUTGOING = 1;
    BILATERAL = 2;
  }
  string sid = 1;
  string uid = 2;
  string displayName = 3;
  bytes extraInfo = 4;
  string destination = 5; // rtsp/rtmp/sip url
  Role role = 6;
  Protocol protocol = 7;
  string avatar = 8;
  Direction direction  = 9;
  string vendor = 10;

  repeated Track tracks = 11;
}

message AddPeerRequest {
  Peer peer = 1;
}

// message AddPeerRequest {
//   enum Direction {
//     INCOMING = 0;
//     OUTGOING = 1;
//     BILATERAL = 2;
//   }
//   string sid = 2;         // session id for conference
//   string uid = 3;         // user id for conference
//   string destination = 4; // rtsp://192.168.1.1:8080/video1,
//                           // rtmp://192.168.1.1/video1, sip:100@alice.com
//   string sourceDisplayName = 5;
//   Role role = 6; // Host, Guest
//   Protocol protocol = 7; // ProtocolWebRTC, ProtocolSIP, ProtocolRTMP, ProtocolRTSP
//   Direction direction = 8;
// }


message GetPeersRequest { string sid = 1; }

message GetPeersReply { 
  bool success = 1;
  Error error = 2;
  repeated Peer Peers = 3; 
}

message Message {
  string from = 1;   // UUID of the sending Peer.
  string to = 2;     // UUID of the receiving Peer.
  string type = 3;   // MIME content-type of the message, usually text/plain.
  bytes payload = 4; // Payload message contents.
}

message SendMessageRequest {
  string sid = 1;
  Message message = 2;
}

message SendMessageReply {
  bool success = 1;
  Error error = 2;
}

message Disconnect {
  string sid = 1;
  string reason = 2;
}

enum PeerState {
  JOIN = 0;
  UPDATE = 1;
  LEAVE = 2;
}

message PeerEvent {
  Peer Peer = 1;
  PeerState state = 2;
}



message UpdateRoomRequest {
  Room room = 1;
}

message UpdateRoomReply {
  bool success = 1;
  Error error = 2;
}

message EndRoomRequest {
  string sid = 1;
  string reason = 2;
  bool delete = 3;
}

message EndRoomReply {
  bool success = 1;
  Error error = 2;
}

message GetRoomsRequest {

}

message GetRoomsReply {
  bool success = 1;
  Error error = 2;
  repeated Room rooms = 3;
}

message AddPeerReply {
  bool success = 1;
  Error error = 2;
}

message SetImportanceRequest {
  string sid = 1;
  repeated string uids = 2;
}
message SetImportanceReply {
  bool success = 1;
  Error error = 2;
}

message UpdatePeerRequest {
  Peer peer = 1;
}

message UpdatePeerReply {
  bool success = 1;
  Error error = 2;
}

message RemovePeerRequest {
  string sid = 1;
  string uid = 2;
}

message RemovePeerReply {
  bool success = 1;
  Error error = 2;
}
